syntax = "proto3";

option go_package = "./pb";

message Empty {}

message OperationResponse {
    bool is_affected = 1;
}